新增專案頁面(erma2.0)

--- a/IntroduceUIView/2022-HappyNewYears.html
+++ b/IntroduceUIView/2022-HappyNewYears.html
@@ -25,11 +25,15 @@
 
   <style>
     .ui-banner-title span {
-      color: #dec277;
+      background: linear-gradient(to right, #e8ba59 0%, #ff402b 50%, #9073ff 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
     }
     .ui-view-right {
-      background-image: url(../image/develop/2022newyear.png);
+      background-image: url(../image/banner/2022newyear.png);
       background-color: bisque;
+      
     }
   </style>
 
@@ -44,7 +48,7 @@
             </a>
           </div>
           <div class="ui-banner-content">
-            <h3 class="ui-banner-title">2022年<span>虎躍新程</span></h3>
+            <h3 class="ui-banner-title">2022年<br><span>虎躍新程</span></h3>
             <p style="font-weight: bold">虎躍新程 虎哩賺大錢！</p>
             <p>
               是為了提供更先進的使用體驗。新設計注入濃厚的過年氛圍，同時引入全新課程和即時資訊，鼓勵更長時間的互動。期待共同邁向這虎躍的新時代，開拓更多商機！
