--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
                                     </p>
                                     <progress value="70" max="100"></progress>
                                 </div>
-                            </li>                        
+                            </li>
+                            <li class="resume-card" style="box-shadow: none;"></li>                      
                         </ul>
                     </div>
                 </div>
