文字更新與新增作品集的連結
首頁的文字更新與實際網站新增

--- a/design.html
+++ b/design.html
@@ -80,6 +80,11 @@
                                 </div>
                                 <p>精心為朋友打造，充滿靈感與技術的程式作品集，展現他的創造力與解決問題的能力。</p>
                             </div>
+                            <div class="portfolio-prototype-projects portfolio-prototype-website">
+                                <a href="https://www.nodm.app/" target="_blank"  class="portfolio-prototype-button">
+                                   實際網站
+                                </a>
+                            </div>
                         </div>                
                         <!--  -->
                         <div class="portfolio-prototype-card portfolio-prototype-card11" data-item="web">
@@ -108,7 +113,7 @@
                                 </div>
                                 <p>ERMA客戶服務維修系統進行重新設計，提供更好的使用體驗，吸引更多人造訪。</p>
                             </div>
-                            <div class="portfolio-prototype-project">
+                            <div class="portfolio-prototype-projects portfolio-prototype-project">
                                 <a href="IntroduceUIView/RMA2.0.html"  class="portfolio-prototype-button">
                                    專案介紹
                                 </a>
@@ -141,7 +146,7 @@
                                 </div>
                                 <p>是虎年為了感謝客戶一直以來的信任與支持，祝福新年快樂，因此特別設計，準備了一個獨特的版面。</p>
                             </div>
-                            <div class="portfolio-prototype-project">
+                            <div class="portfolio-prototype-projects portfolio-prototype-project">
                                 <a href="IntroduceUIView/2022-HappyNewYears.html"  class="portfolio-prototype-button">
                                    專案介紹
                                 </a>
