--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="bannet-text-block">
                     <h4>Hello</h4>
                     <div class="portfolio-block">
-                        <p>我是Jerry沈俊宏！一位UI/UX跨入寫程式的的設計師</p>
+                        <p>我是Jerry 沈俊宏！</p>
+                        <p>一位 UI/UX 跨入寫程式的的設計師，也熱愛科技產品</p>
                         <div class="portfolio-individual">
                             <div class="portfolio-language">
                                 <table>
@@ -82,7 +83,7 @@
                                             <p>我是一名UI/UX設計師與前端工程師，擁有豐富的工作經驗。</p>
                                             <p>目前在設計部門擔任職務，之前曾在RD部門，負責協助完成多個系統軟體、APP和官網的UI/UX設計改版與優化。同時，我參與了前端版面的開發，運用HTML、CSS、JavaScript、JQuery、Vue3、MVC等技術進行功能開發。與RD、PM、行銷、Sales、支援技術等部門保持緊密合作完成專案。</p>
                                             <p>我的專業技能包括使用Wireframe和Prototype進行與團隊的設計討論，並應用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。過去的工作經驗中，我與行銷和業務等部門合作優化SEO和架構，負責設計平面廣告和電子郵件。我還導入Google Analytics等工具分析網站數據，為行銷團隊提供決策支持。深信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我不斷學習和更新技能，以提供最佳的服務和價值。</p>
-                                            <p>近期，我加入了使用AI工具（如ChatGPT、Stable Diffusion等），以提高工作效率和準確性。這項技術的應用進一步展現了我的求知態度和對於前瞻性科技的熱忱。期望能將這些經驗和技能帶到新的挑戰中，為公司創造更卓越的設計和卓越的用戶體驗。</p>                                         
+                                            <p>最近，我採用AI工具（例如ChatGPT、Stable Diffusion），提升工作效率和準確性。這展現了我對前瞻科技的熱忱和不斷求知的態度。我熱愛優化科技產品的使用者體驗，期望能將這份熱情和專業技能融入新的挑戰，為公司創造更卓越的設計和出色的用戶體驗。</p>                                         
                                         </td>
                                     </tr>
                                 </table>
