整合追蹤碼，並且加入Microsoft Clarity 網站分析

--- a/IntroduceUIView/RMA2.0.html
+++ b/IntroduceUIView/RMA2.0.html
@@ -7,20 +7,8 @@
     <title>ERMA2.0專案</title>
     <link rel="stylesheet" href="../css/uiView.css" />
     <script src="../js/fontawesome-all.js"></script>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-N0N5SG9CNG"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-N0N5SG9CNG");
-    </script>
+    <!-- 追蹤碼 -->
+    <script src="js/TrackingCode.js"></script>    
   </head>
 
   <style>
