--- a/design.html
+++ b/design.html
@@ -6,17 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/design.css">
-    <script src="js/fontawesome-all.js"></script>
     <title>Jerry Portfolio-Design</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N0N5SG9CNG"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-N0N5SG9CNG');
-    </script>    
+    <script src="js/fontawesome-all.js"></script>
+    <!-- 追蹤碼 -->
+    <script src="js/TrackingCode.js"></script>
 </head>
 
 <body>
@@ -344,9 +337,7 @@
 
         <!-- 平面設計 -->
         <div class="portfolio-graphicDesign-area section" id="menu4">
-            <div>        
-                <h4>平面設計</h4>
-            </div>
+            <h4>平面設計</h4>
             <!--  -->
             <div class="portfolio-graphicDesign-areas portfolio-graphicDesign-area1 graphicDesignSection"
                 id="graphicDesign1" style="background: #9cc1b7;">
@@ -398,7 +389,7 @@
 
         </div>
         <!-- EDM版面 -->
-        <div class="portfolio-edmDesign-area section " id="menu6">
+        <div class="portfolio-edmDesign-area section" id="menu6">
             <div class="edmDesign-ul ">
                 <div class="edmDesign-li edmDesign-li1 ">
                     <div class="edmDesign-tooBar ">
