--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerry Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="image/j_icon.ico">
     <script src="js/fontawesome-all.js"></script>
-    <title>Jerry Portfolio</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N0N5SG9CNG"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-N0N5SG9CNG');
-    </script>
+    <!-- 追蹤碼 -->
+    <script src="js/TrackingCode.js"></script>
 </head>
 
 <body>
@@ -359,7 +352,7 @@
     </div>
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></scrip>
 
     <!-- paroller.js -->
     <script src="js/jquery.paroller.js"></script>
