--- a/IntroduceUIView/2022-HappyNewYears.html
+++ b/IntroduceUIView/2022-HappyNewYears.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/uiView.css" />
     <script src="../js/fontawesome-all.js"></script>
     <!-- 追蹤碼 -->
-    <script src="js/TrackingCode.js"></script>    
+    <script src="../js/TrackingCode.js"></script>    
   </head>
 
   <style>
