優化作品集的文字與新增hint
hint--top
hint--bottom
hint--left
hint--right

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry Portfolio</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css?20240226">
+    <link rel="stylesheet" href="css/hint.min.css">
     <link rel="icon" href="image/j_icon.ico">
     <script src="js/fontawesome-all.js"></script>
     <!-- 追蹤碼 -->
@@ -73,10 +74,10 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">
-                                            <p>我是一名UI/UX設計師與前端工程師，擁有豐富的工作經驗。</p>
-                                            <p>目前在設計部門擔任職務，之前曾在RD部門，負責協助完成多個系統軟體、APP和官網的UI/UX設計改版與優化。同時，我參與了前端版面的開發，運用HTML、CSS、JavaScript、JQuery、Vue3、MVC等技術進行功能開發。與RD、PM、行銷、Sales、支援技術等部門保持緊密合作完成專案。</p>
-                                            <p>我的專業技能包括使用 Wireframe 和 Prototype 進行與團隊的設計討論，並應用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。過去的工作經驗中，我與行銷和業務等部門合作優化SEO和架構，負責設計平面廣告和電子郵件。我還導入Google Analytics等工具分析網站數據，為行銷團隊提供決策支持。深信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我不斷學習和更新技能，以提供最佳的服務和價值。</p>
-                                            <p>最近，我也在工作使用AI工具（例如ChatGPT、Stable Diffusion），提升工作效率和準確性。也是我對前瞻科技的熱忱和不斷求知的態度。我喜歡科技產品的使用者體驗，期望能將這份熱情和專業技能融入新的挑戰，為公司創造更卓越的設計和出色的用戶體驗。</p>                                         
+                                            <p>我是一名 UI/UX 設計師與前端工程師。</p>
+                                            <p>目前在設計部門擔任職務，之前曾在RD部門。負責協助完成多個 APP 和官網、系統軟體、元件的 UI/UX 設計改版與優化。同時我也參與了前端版面的開發，有用HTML、CSS、JavaScript、JQuery、Vue3、MVC等技術進行功能開發。也與 RD、PM、行銷、Sales、支援技術...等部門保持緊密合作完成專案。</p>
+                                            <p>我的專業技能包括使用 Wireframe 和 Prototype 進行與團隊的 UI/UX 設計討論，並應用Adobe Illustrator和Photoshop等工具製作高質量的平面設計和ICON。過去的工作經驗中，我與行銷和業務等部門合作優化SEO和架構，負責設計平面廣告和電子郵件。我還導入Google Analytics等工具分析網站數據，為行銷團隊提供決策支持。深信良好的UI/UX設計能夠提高用戶體驗和轉換率，因此我不斷學習和更新技能，以提供最佳的服務和價值。</p>
+                                            <p>最近，我也在工作使用AI工具（例如ChatGPT、Stable Diffusion...等），提升工作效率和準確性。也是我對前瞻科技的熱忱和不斷求知的態度。我喜歡科技產品的使用者體驗，期望能將這份熱情和專業技能融入新的挑戰，為公司創造更卓越的設計和出色的用戶體驗。</p>                                         
                                         </td>
                                     </tr>
                                 </table>
@@ -103,19 +104,24 @@
                                 <li>
                                     <div class="resume-div">
                                         <p class="resume-Title">
-                                            UI/UX 網頁設計師＆<br>
-                                            前端開發工程師
+                                            UI/UX 網頁設計師＆前端開發工程師
                                         </p>
                                         <p class="resume-date">
                                             2022.06 -
                                         </p>
                                         <div class="resume-content">
-                                            <p>。多個系統產品的Redesign ＆ UI Prototype設計</p>
-                                            <p>。多個系統的UX使用者體驗研究與探討</p>
-                                            <p>。新產品Mobile APP Prototype設計</p>
-                                            <p>。多個產品的Flow Chart製作</p>
-                                            <p>。產品Logo發想與製作設計</p>
-                                            <p>。公司平面的Banner與ICON製作</p>
+                                            <p>。多個系統產品的 Redesign ＆ UI/UX Wireframe&Prototype設計
+                                                <span class="resume-hint hint--bottom" data-hint="•ERMA維修服務系統 •ReMoCloud裝置管理系統 •CAI分析系統 •公司官網"><img src="./image/icon/description.svg"></span>
+                                            </p>
+                                            <p>。多個系統的 UX 使用者體驗研究與探討</p>
+                                            <p>。新產品 Mobile APP Prototype設計
+                                                <span class="resume-hint hint--bottom" data-hint="•OCR Demo辨識 •VOD影片 •LaunchPad Connect •x SATO Connect •IntelliWorker操作"><img src="./image/icon/description.svg"></span>
+                                            </p>
+                                            <p>。多個產品的 Flow Chart製作</p>
+                                            <p>。產品 Logo 發想與製作設計
+                                                <span class="resume-hint hint--bottom" data-hint="•Service Advantage •OCR Demo辨識 •LaunchPad Connect •CAI分析 •x SATO Connect •IntelliWorker操作"><img src="./image/icon/description.svg"></span>
+                                            </p>
+                                            <p>。公司平面的 Banner 與 ICON 製作</p>
                                             <p>。多個系統前端開發製作，含不同尺寸的調整</p>
                                         </div>
                                     </div>
@@ -123,15 +129,17 @@
                                 <li>
                                     <div class="resume-div">
                                         <p class="resume-Title">
-                                            UI/UX 網頁設計師＆<br>
-                                            前端開發工程師
+                                        UI/UX 網頁設計師＆前端開發工程師
+                                        </p>
+                                        <p class="resume-Company">
+                                            Smart eVision
                                         </p>
                                         <p class="resume-date">
                                             2016.05 - 2022.05
                                         </p>
                                         <div class="resume-content">
-                                            <p>。公司多國官網與產品的UI Prototype設計</p>
-                                            <p>。公司的Mobile產品改版設計並且開發</p>
+                                            <p>。公司台灣與國外官網與產品的 UI/UX Prototype設計</p>
+                                            <p>。公司的 Mobile 產品改版設計並且開發</p>
                                             <p>。公司網站的開發與優化更新(含RWD)</p>
                                             <p>。EDM電子報的版面設計與開發製作</p>
                                             <p>。Banner設計＆Icon設計製作</p>
