調整手機介面的選單呈現

--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                                             2022.06 -
                                         </p>
                                         <div class="resume-content">
-                                            <p>。多個系統產品的 Redesign ＆ UI/UX Wireframe&Prototype設計
+                                            <p>
+                                                <span>
+                                                    。多個系統產品的 Redesign ＆ UI/UX Wireframe&Prototype設計
+                                                </span>
                                                 <span class="resume-hint hint--bottom" data-hint="•ERMA維修服務系統 •ReMoCloud裝置管理系統 •CAI分析系統 •公司官網"><img src="./image/icon/description.svg"></span>
                                             </p>
                                             <p>。多個系統的 UX 使用者體驗研究與探討</p>
@@ -118,7 +121,10 @@
                                                 <span class="resume-hint hint--bottom" data-hint="•OCR Demo辨識 •VOD影片 •LaunchPad Connect •x SATO Connect •IntelliWorker操作"><img src="./image/icon/description.svg"></span>
                                             </p>
                                             <p>。多個產品的 Flow Chart製作</p>
-                                            <p>。產品 Logo 發想與製作設計
+                                            <p>
+                                            <span>
+                                                。產品 Logo 發想與製作設計
+                                            </span>
                                                 <span class="resume-hint hint--bottom" data-hint="•Service Advantage •OCR Demo辨識 •LaunchPad Connect •CAI分析 •x SATO Connect •IntelliWorker操作"><img src="./image/icon/description.svg"></span>
                                             </p>
                                             <p>。公司平面的 Banner 與 ICON 製作</p>
