更新專業技能

--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
                         <ul>
                             <!-- 一個卡 -->
                             <li class="resume-card">
-                                <h4>UI/UX設計</h4>
+                                <h4>UI設計</h4>
                                 <div class="resume-progress">
-                                    <p>元件設計</p>
+                                    <p>Design Systems</p>
                                     <progress value="90" max="100"></progress>
                                 </div>
                                 <div class="resume-progress">
-                                    <p>Wireframe/Prototype</p>
+                                    <p>Wireframe / Prototype</p>
                                     <progress value="90" max="100"></progress>
                                 </div>
                                 <div class="resume-progress">
-                                    <p>網頁設計</p>
+                                    <p>公司網頁設計</p>
                                     <progress value="85" max="100"></progress>
                                 </div>
                                 <div class="resume-progress">
@@ -219,6 +219,23 @@
                                     <progress value="80" max="100"></progress>
                                 </div>
                             </li>
+                            <!-- 一個卡 -->
+                            <li class="resume-card">
+                                <h4>UX設計</h4>
+                                <div class="resume-progress">
+                                    <p>元件專業知識</p>
+                                    <progress value="90" max="100"></progress>
+                                </div>
+                                <div class="resume-progress">
+                                    <p>訊息架構</p>
+                                    <progress value="80" max="100"></progress>
+                                </div>
+                                <div class="resume-progress">
+                                    <p>一致性、易用性、降低學習負擔</p>
+                                    <progress value="85" max="100"></progress>
+                                </div>
+    
+                            </li>                            
                             <!-- 一個卡 -->
                             <li class="resume-card">
                                 <h4>繪圖軟體</h4>
@@ -244,8 +261,13 @@
                                     <progress value="60" max="100"></progress>
                                 </div>
                             </li>
-                            <!-- 一個卡 -->
-                            <li class="resume-card">
+                    
+                        </ul>
+                    </div>
+                    <div class="resume-block resume-block-skill">
+                        <ul>
+                             <!-- 一個卡 -->
+                             <li class="resume-card">
                                 <h4>網頁前端</h4>
                                 <div class="resume-progress">
                                     <p>HTML</p>
@@ -267,11 +289,7 @@
                                     <p>Vue3</p>
                                     <progress value="70" max="100"></progress>
                                 </div>
-                            </li>                      
-                        </ul>
-                    </div>
-                    <div class="resume-block resume-block-skill">
-                        <ul>                           
+                            </li>               
                             <!-- 一個卡 -->
                             <li class="resume-card">
                                 <h4>運用AI</h4>
@@ -311,7 +329,6 @@
                                     <progress value="70" max="100"></progress>
                                 </div>
                             </li>
-                            <li class="resume-card" style="box-shadow: none;"></li>                      
                         </ul>
                     </div>
                 </div>
